--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     </section>
 
         <div class="index"> 
-            <button onclick="paginacion('Anterior')" class="btPag"> < Anterior </button>
-            <button onclick="paginacion('Siguiente')" class="btPag"> Siguiente > </button>
+            <button onclick="paginacion('Anterior')" > < Anterior </button>
+            <div id="numeritos">
+
+            </div>
+            <button onclick="paginacion('Siguiente')" > Siguiente > </button>
         </div>
 
     <script src="js/array.js"></script>
