--- a/vistas/registrar.html
+++ b/vistas/registrar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/registro.css" />
 </head>
 
-<body>
+<body id="registro">
     <section>
 
         <h2>Registro de productos</h2>
