--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/index.css" />
 </head>
 
-<body>
+<body id="tarjetas">
     <header>
         <h1 class="titulo">Vista de Productos</h1>
 
