Correccion en DOM

--- a/index.html
+++ b/index.html
@@ -13,24 +13,32 @@
         <h1 class="titulo">Vista de Productos</h1>
 
         <nav>
-			<ul class="main-nav">
-				<li class="main-nav__item"><a href="./vistas/registrar.html">Registrar</a></li>
-				<li class="main-nav__item"><a href="./vistas/buscador.html">Buscar</a></li>
-			</ul>
-		</nav>
+            <ul class="main-nav">
+                <li class="main-nav__item"><a href="./vistas/registrar.html">Registrar</a></li>
+                <li class="main-nav__item"><a href="./vistas/buscador.html">Buscar</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section id="cards-articulos">
-      
+
     </section>
 
-        <div class="index"> 
-            <button onclick="paginacion('Anterior')" > < Anterior </button>
-            <div id="numeritos">
+    <div class="index" id="indexPag">
 
-            </div>
-            <button onclick="paginacion('Siguiente')" > Siguiente > </button>
+        <div id="btAnter">
+
         </div>
+
+        <div id="numeritos">
+
+        </div>
+
+        <div id="btSigui">
+
+        </div>
+
+    </div>
 
     <script src="js/array.js"></script>
 </body>
