--- a/vistas/buscador.html
+++ b/vistas/buscador.html
@@ -60,6 +60,19 @@
         </table>
     </section>
 
+    <div class="index" id="indexPag">
+
+        <div id="btAnter">
+        </div>
+
+        <div id="numeritos">
+        </div>
+
+        <div id="btSigui">
+        </div>
+
+    </div>
+    
     <script src="../js/array.js"></script>
 </body>
 
