--- a/vistas/buscador.html
+++ b/vistas/buscador.html
@@ -45,12 +45,12 @@
         <table>
             <thead>
                 <tr>
-                    <th>Codigo</th>
+                    <th>Imagen</th>
                     <th>Nombre</th>
                     <th>Categoria</th>
+                    <th>Precio</th>
                     <th>Marca</th>
                     <th>Modelo</th>
-                    <th>Cantidad</th>
                 </tr>
             </thead>
 
@@ -72,7 +72,7 @@
         </div>
 
     </div>
-    
+
     <script src="../js/array.js"></script>
 </body>
 
