--- a/vistas/instrucciones.html
+++ b/vistas/instrucciones.html
@@ -36,25 +36,27 @@
         </div>
     </section>
 
-    <section>
-        <h2>Instrucciones para Crear un Producto</h2>
-        <p>Bienvenido a la guía de instrucciones para crear un nuevo producto en nuestro inventario de ferretería.
-            Sigue
-            estos pasos para registrar correctamente un producto.</p>
+    <section class="instrucciones">
+        <div class="parrafoInstrucciones">
+            <h2>Instrucciones para <u>Crear un producto</u></h2>
+            <p>Bienvenido a la guía de instrucciones para crear un nuevo producto en nuestro inventario de ferretería.
+                Sigue
+                estos pasos para registrar correctamente un producto.</p>
+        </div>
 
         <div class="contenedorInstrucciones">
             <div class="pasos1y2">
-                <div>
+                <div class="paso1">
                     <h3>01. Informacion Basica</h3>
                     <ol>
                         <li>En el campo "Nombre", ingresa el nombre del producto (máximo 20 caracteres).</li>
-                        <li>En el campo "Código", ingresa un código único para el producto (mínimo 8 caracteres,
-                            obligatorio).
+                        <li>En el campo "Código", ingresa un código único para el producto ( Debe tener mínimo 8 caracteres,
+                            una minúscula y una mayuscula y mínimo 2 números).
                         </li>
                     </ol>
                 </div>
 
-                <div>
+                <div class="paso2">
                     <h3> 02. Detalles del Producto</h3>
                     <ol>
                         <li>Selecciona la categoría adecuada para el producto en el menú desplegable "Categoría".
@@ -68,23 +70,17 @@
             </div>
 
             <div class="pasos3y4">
-                <div>
+                <div class="paso3">
                     <h3>03. Imagen del Producto</h3>
                     <ol>
                         <li>Selecciona una imagen representativa del producto en el menú desplegable "Seleccione una
                             imagen". La
                             imagen seleccionada se mostrará debajo del menú.</li>
-                        <li>Una vez completados todos los campos, haz clic en "Registrar" para agregar el producto
-                            al
-                            inventario. Si deseas limpiar los campos, haz clic en "Limpiar". Para cancelar y volver
-                            a la
-                            página
-                            anterior, haz clic en "Cancelar".</li>
                     </ol>
                 </div>
 
 
-                <div>
+                <div class="paso4">
                     <h3>04. Registro</h3>
                     <li>Una vez completados todos los campos, haz clic en "Registrar" para agregar el producto al
                         inventario. Si deseas limpiar los campos, haz clic en "Limpiar". Para cancelar y volver a la
